School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_obj/tests_extends.deca
//Mauvaise declaration avec extends
class A extends B{
    int x;
}

class B{
    float y;
}